nambahin admin commodity dan transaction

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -14,7 +14,7 @@
     ]
   },
   "User": {
-    "dataSource": "db"
+    "dataSource": "mongodb"
   },
   "AccessToken": {
     "dataSource": "db",
@@ -36,6 +36,18 @@
     "public": false
   },
   "Customer": {
+    "dataSource": "mongodb",
+    "public": true
+  },
+  "Admin": {
+    "dataSource": "mongodb",
+    "public": true
+  },
+  "Commodity": {
+    "dataSource": "mongodb",
+    "public": true
+  },
+  "Transaction": {
     "dataSource": "mongodb",
     "public": true
   }
